@@ -1,5 +1,6 @@
 Changes for 1.3.1:
 
+ - improved installation wizard (Eugene)
  - fixed permission system (Eugene)
  - added availability of multiple user groups selection (Eugene)
  - fixed screens displaying (Eugene)
@@ -8,7 +9,7 @@ Changes for 1.3.1:
  - improved editing of graphs (Eugene)
  - support of "-n" flag for ZABBIX server: change Node ID (Alexei)
  - fixed configuration file creation and reading (Eugene)
- - removed database creation from installation scriop (Eugene)
+ - removed database creation from installation script (Eugene)
  - fixed multiple mutex system (Eugene)
  - added support of SQLite3 database (Eugene)
  - added transactional approach to ZABBIX server (Alexei)
